--- a/Lab6_Pub/Lab6_Pub/MainWindow.xaml
+++ b/Lab6_Pub/Lab6_Pub/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Label x:Name="lblBartender" Content="Bartender" HorizontalAlignment="Left" Height="24" Margin="82,16,0,0" VerticalAlignment="Top" Width="71"/>
         <Label x:Name="lblWaitress" Content="Waitress" HorizontalAlignment="Left" Height="24" Margin="240,16,0,0" VerticalAlignment="Top" Width="71"/>
         <Label x:Name="lblGuests" Content="Guests" HorizontalAlignment="Left" Height="24" Margin="400,16,0,0" VerticalAlignment="Top" Width="71"/>
-        <Label x:Name="lblChairs" Content="Chairs" HorizontalAlignment="Left" Height="30" Margin="560,54,0,0" VerticalAlignment="Top" Width="195"/>
+        <Label x:Name="lblChairs" HorizontalAlignment="Left" Height="30" Margin="560,54,0,0" VerticalAlignment="Top" Width="195"/>
         <Label x:Name="lblGlasses" Content="Glasses" HorizontalAlignment="Left" Height="30" Margin="560,105,0,0" VerticalAlignment="Top" Width="195"/>
 
     </Grid>
