--- a/Lab6_Pub/Lab6_Pub/MainWindow.xaml
+++ b/Lab6_Pub/Lab6_Pub/MainWindow.xaml
@@ -15,6 +15,7 @@
         <Label x:Name="lblGuests" Content="Guests" HorizontalAlignment="Left" Height="24" Margin="400,16,0,0" VerticalAlignment="Top" Width="71"/>
         <Label x:Name="lblChairs" HorizontalAlignment="Left" Height="30" Margin="560,54,0,0" VerticalAlignment="Top" Width="195"/>
         <Label x:Name="lblGlasses" Content="Glasses" HorizontalAlignment="Left" Height="30" Margin="560,105,0,0" VerticalAlignment="Top" Width="195"/>
+        <Label x:Name="lblChairs1" Content="Chairs" HorizontalAlignment="Left" Height="30" Margin="560,156,0,0" VerticalAlignment="Top" Width="195"/>
 
     </Grid>
 </Window>
