--- a/Lab6_Pub/Lab6_Pub/MainWindow.xaml
+++ b/Lab6_Pub/Lab6_Pub/MainWindow.xaml
@@ -16,6 +16,7 @@
         <Label x:Name="lblChairs" HorizontalAlignment="Left" Height="30" Margin="560,54,0,0" VerticalAlignment="Top" Width="195"/>
         <Label x:Name="lblGlasses" Content="Glasses" HorizontalAlignment="Left" Height="30" Margin="560,105,0,0" VerticalAlignment="Top" Width="195"/>
         <Label x:Name="lblChairs1" Content="Chairs" HorizontalAlignment="Left" Height="30" Margin="560,156,0,0" VerticalAlignment="Top" Width="195"/>
+        <Label x:Name="lblBarOpen" Content="The bar is open!" HorizontalAlignment="Left" Height="26" Margin="284,269,0,0" VerticalAlignment="Top" Width="187"/>
 
     </Grid>
 </Window>
